manifests/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshoppublicapi
  labels:
    app: eshoppublicapi
    kubernetes.azure.com/generator: draft
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshoppublicapi
  template:
    metadata:
      labels:
        app: eshoppublicapi
    spec:
      containers:
        - name: eshoppublicapi
          image: carlsonrmcr1024.azurecr.io/eshop/eshoppublicapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopwebmvc
  labels:
    app: eshopwebmvc
    kubernetes.azure.com/generator: draft
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopwebmvc
  template:
    metadata:
      labels:
        app: eshopwebmvc
    spec:
      containers:             
        - name: eshopwebmvc
          image: carlsonrmcr1024.azurecr.io/eshop/eshopwebmvc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
