manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshopwebmvc
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: eshop.example.com
    http:
      paths:
      - backend:
          service:
            name: eshopwebmvc
            port:
              number: 80
        path: /eshopwebmvc
        pathType: Prefix
