manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshoppublicapi
  namespace: default
  labels:
    kubernetes.azure.com/generator: draft
spec:
  type: LoadBalancer
  selector:
    app: eshoppublicapi
  ports:
    - protocol: TCP
      name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: eshopwebmvc
  namespace: default
  labels:
    kubernetes.azure.com/generator: draft
spec:
  type: LoadBalancer
  selector:
    app: eshopwebmvc
  ports:
    - protocol: TCP
      name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          # - path: /publicapi
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: eshoppublicapi
          #       port:
          #         number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshopwebmvc
                port:
                  number: 8080
